v3.7.1-rc.1 (XXXX-XX-XX)
------------------------

* The Web UI's replication view is now checking the replication state
  automatically without the need of a manual reload.

* Changing the current users profile icon in the Web UI now renders the new icon
  and data directly without the need of a full UI browser reload.

* Fixed cluster behavior with HotBackup and non-existing backups on DB-Servers.

* Fixed that, when performing a graph AQL query while a (graceful) failover for
  the leader of the system collections is in progress, ArangoDB would report a
  "Graph not found error".
  The real error, namely that an agency transaction failed, was swallowed in
  the graph lookup code due to a wrong error code being used from Fuerte.
  We now generate a more appropriate 503 - Service Unavailable error.

* Fixed bad behavior that led to unnecessary additional revision tree rebuilding
  on server restart.

* Only advance shard version after follower is reported in sync in agency.

* Disabled new, potentially unsafe revision-based storage format.

* Allow for faster cluster shutdown. This should reduce the number of shutdown
  hangers in case the agents are stopped already and then coordinators or
  DB-Servers are shut down.

* Fixed issue ES-598. Web UI now shows correct permissions in case wildcard
  database level and wildcard collection level permissions are both set.

* Fixed non-deterministic test failure in Pregel WCC test.

* Add a recovery test to check that there are no warnings at server start after
  a graceful shutdown.

* Fixed unintentional connection re-use for cluster-internal communications.

* Fixed problem with newer replication protocol and ArangoSearch which could
  lead to server crashes during normal operation.

* Allow AQL queries on DB-Servers again. This is not an official supported
  feature, but is sometimes used for debugging. Previous changes made it
  impossible to run a query on a local shard.
